Fixed logo not aligned

--- a/src/fonts/fontface.css
+++ b/src/fonts/fontface.css
@@ -1,78 +1,85 @@
 /* Spotify Circular family */
 @font-face {
     font-family: "Spotify Circular";
-    src: url("./CircularSpotifyText-Bold.otf") format("opentype");
+    src: url("./circular-sp/CircularSp-Bold.woff2");
     font-weight: bold;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Spotify Circular";
+    src: url("./circular-sp/CircularSp-Book.woff2");
+    font-weight: normal;
     font-style: normal;
 }
 
 /* SpotifyMix family */
 @font-face {
     font-family: 'Spotify Mix';
-    src: url("./SpotifyMix-Bold.woff") format('woff2');
+    src: url("./spotify-mix/SpotifyMix-Bold.woff") format('woff2');
     font-weight: bold;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Spotify Mix';
-    src: url("./SpotifyMix-BoldItalic.woff") format('woff2');
+    src: url("./spotify-mix/SpotifyMix-BoldItalic.woff") format('woff2');
     font-weight: bold;
     font-style: italic;
 }
 
 @font-face {
     font-family: 'Spotify Mix';
-    src: url("./SpotifyMix-Extrabold.woff") format('woff2');
+    src: url("./spotify-mix/SpotifyMix-Extrabold.woff") format('woff2');
     font-weight: 800;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Spotify Mix';
-    src: url("./SpotifyMix-ExtraboldItalic.woff") format('woff2');
+    src: url("./spotify-mix/SpotifyMix-ExtraboldItalic.woff") format('woff2');
     font-weight: 800;
     font-style: italic;
 }
 
 @font-face {
     font-family: 'Spotify Mix';
-    src: url("./SpotifyMix-Light.woff") format('woff2');
+    src: url("./spotify-mix/SpotifyMix-Light.woff") format('woff2');
     font-weight: 300;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Spotify Mix';
-    src: url("./SpotifyMix-LightItalic.woff") format('woff2');
+    src: url("./spotify-mix/SpotifyMix-LightItalic.woff") format('woff2');
     font-weight: 300;
     font-style: italic;
 }
 
 @font-face {
     font-family: 'Spotify Mix';
-    src: url("./SpotifyMix-Medium.woff") format('woff2');
+    src: url("./spotify-mix/SpotifyMix-Medium.woff") format('woff2');
     font-weight: 500;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Spotify Mix';
-    src: url("./SpotifyMix-MediumItalic.woff") format('woff2');
+    src: url("./spotify-mix/SpotifyMix-MediumItalic.woff") format('woff2');
     font-weight: 500;
     font-style: italic;
 }
 
 @font-face {
     font-family: 'Spotify Mix';
-    src: url("./SpotifyMix-Regular.woff") format('woff2');
+    src: url("./spotify-mix/SpotifyMix-Regular.woff") format('woff2');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Spotify Mix';
-    src: url("./SpotifyMix-RegularItalic.woff") format('woff2');
+    src: url("./spotify-mix/SpotifyMix-RegularItalic.woff") format('woff2');
     font-weight: normal;
     font-style: italic;
 }
