--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -37,10 +37,9 @@
 /* SiteTitle font uses special Circular */
 .site-title {
     gap: calc(.25 * var(--sl-nav-gap));
-    vertical-align: middle;
 }
 
 .site-title span {
-    font-family: "Spotify Circular", sans-serif;
+    font-family: 'Spotify Circular', sans-serif;
     font-weight: bold;
 }
